# cdsync

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  MISSION.md  NEXT.md  README.md  docker-compose.e2e.yml
.github/workflows/: ci.yml  release.yml
deploy/config/: cdsync-app.production.template.toml  cdsync-app.staging.template.toml
deploy/ecs/: cdsync-staging-oneoff.sh  run-staging-oneoff.sh
deploy/fivetran/: generate_cdsync_app_templates.py
deploy/systemd/: cdsync@.service
docker/: Dockerfile.runner
docs/: TODO.md  configuration.md  datastream-airbyte-migration.md  e2e.md  how-cdsync-works.md  operations.md  parallel-cdc-baseline.md  parallel-cdc-benchmark.md  parallel-cdc-rollout.md  parallel-cdc-staging-strategy.md  parallel-cdc-wal-ingestion.md  reliability-plan.md
migrations/state/: 0002_cdc_batch_load_jobs.sql  0004_cdc_watermark_feedback_state.sql  0005_postgres_table_resync_requests.sql  0006_cdc_feedback_state.sql  0006_retry_metadata.sql  0007_cdc_feedback_state.sql  0008_cdc_ledger_metadata.sql  0009_dynamodb_follow_state.sql  0010_cdc_fragment_expected_count.sql  0011_cdc_batch_load_reducer_eligibility.sql  0012_cdc_batch_load_ready_heads.sql
scripts/: install-hooks.sh  run-cdc-benchmark.sh  run-e2e-suite.sh
src/: admin_api.rs  commands.rs  config.rs  lib.rs  main.rs  main_tests.rs  monitor.rs  ops.rs  retry.rs  runner.rs  state.rs  stats.rs  supervisor.rs  telemetry.rs  tls.rs  types.rs
src/admin_api/: models.rs  route_tests.rs  runtime_helpers.rs  scrub.rs  streaming.rs  tests.rs
src/destinations/: bigquery.rs  etl_bigquery.rs  mod.rs
src/destinations/bigquery/: batch_load.rs  storage_write.rs  values.rs
src/destinations/etl_bigquery/: frame.rs  queue.rs
src/sources/: contract.rs  dynamodb.rs  mod.rs  postgres.rs  salesforce.rs
src/sources/postgres/: cdc_loop.rs  cdc_pipeline.rs  cdc_relation.rs  cdc_runtime.rs  cdc_sync.rs  convert.rs  schema.rs  snapshot_sync.rs  table_selection.rs  tests.rs
src/state/: cdc.rs  handle.rs  helpers.rs  models.rs  tests.rs
tests/: e2e_dynamodb_localstack.rs  e2e_postgres_bigquery.rs  e2e_postgres_bigquery_real.rs  e2e_postgres_bigquery_real_cdc.rs  e2e_postgres_cdc.rs  e2e_postgres_follow_config_changes.rs  e2e_postgres_follow_config_changes_real.rs  e2e_postgres_schema_changes.rs  e2e_postgres_soft_deletes.rs  e2e_runner_graceful_shutdown.rs  salesforce_rate_limit.rs  state_store_integration.rs  telemetry_otlp_smoke.rs
tests/support/: emulator_read.rs  mod.rs  real_bigquery.rs
