[features]
default = []
monitor-ui = ["dep:crossterm", "dep:ratatui"]

[package]
name = "cdsync"
version = "0.2.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
anyhow = "1"
axum = { version = "0.8.8", features = ["json", "tokio", "http1"] }
base64 = "0.22"
bigdecimal = "0.4"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", optional = true }
dotenvy = "0.15"
etl = { path = "vendor/supabase-etl/etl", package = "etl", default-features = false }
etl-postgres = { path = "vendor/supabase-etl/etl-postgres", package = "etl-postgres", default-features = false, features = ["replication"] }
futures = "0.3"
gcloud-bigquery = "1.5.0"
google-cloud-gax = "1"
gcloud-googleapis = "1.3.0"
globset = "0.4"
hex = "0.4"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
opentelemetry = { version = "0.31.0", default-features = false, features = ["trace", "metrics"] }
opentelemetry-http = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["http-proto", "reqwest-client", "reqwest-rustls-webpki-roots", "trace", "metrics"] }
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = ["trace", "metrics", "rt-tokio", "experimental_trace_batch_span_processor_with_async_runtime", "experimental_metrics_periodicreader_with_async_runtime"] }
polars = { version = "0.51.0", features = ["lazy", "dtype-datetime", "dtype-date", "dtype-decimal", "json", "parquet"] }
postgres-replication = { git = "https://github.com/MaterializeInc/rust-postgres", rev = "c4b473b478b3adfbf8667d2fbe895d8423f1290b" }
prost = "0.14"
prost-reflect = "0.16"
prost-types = "0.14"
native-tls = "0.2"
reqwest = { version = "0.12", features = ["json"] }
ratatui = { version = "0.29", optional = true }
rustls = { version = "0.23", features = ["ring"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yaml_serde = "0.10.4"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "bigdecimal"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "process"] }
tokio-native-tls = "0.3"
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres", rev = "c4b473b478b3adfbf8667d2fbe895d8423f1290b" }
toml = "0.8"
tonic = "0.14"
token-source = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json", "time"] }
tracing-opentelemetry = "0.32.1"
uuid = { version = "1", features = ["serde", "v4"] }
url = "2"
urlencoding = "2"

[profile.release]
overflow-checks = true

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
