[package]
name = "cdsync"
version = "0.5.0"
edition = "2024"
autotests = false

[features]
default = []
monitor-ui = ["dep:crossterm", "dep:ratatui"]
integration-tests = []
real-bq-tests = []

[dependencies]
async-trait = "0.1"
anyhow = "1"
async-compression = { version = "0.4", features = ["tokio", "gzip"] }
aws-config = "1"
aws-sdk-dynamodb = "1"
aws-sdk-kinesis = "1"
aws-sdk-s3 = "1"
aws-smithy-types = "1"
aws-types = "1"
axum = { version = "0.8.8", features = ["json", "tokio", "http1"] }
base64 = "0.22"
bigdecimal = "0.4"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", optional = true }
dotenvy = "0.15"
etl = { path = "vendor/supabase-etl/etl", package = "etl", default-features = false }
etl-postgres = { path = "vendor/supabase-etl/etl-postgres", package = "etl-postgres", default-features = false, features = ["replication"] }
futures = "0.3"
gcloud-bigquery = "1.5.0"
google-cloud-gax = "1"
gcloud-googleapis = "1.3.0"
globset = "0.4"
hex = "0.4"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
opentelemetry = { version = "0.31.0", default-features = false, features = ["trace", "metrics"] }
opentelemetry-http = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["http-proto", "reqwest-client", "reqwest-rustls-webpki-roots", "trace", "metrics"] }
opentelemetry_sdk = { version = "0.31.0", default-features = false, features = ["trace", "metrics", "rt-tokio", "experimental_trace_batch_span_processor_with_async_runtime", "experimental_metrics_periodicreader_with_async_runtime"] }
polars = { version = "0.51.0", features = ["lazy", "dtype-datetime", "dtype-date", "dtype-decimal", "json", "parquet"] }
postgres-replication = { git = "https://github.com/MaterializeInc/rust-postgres", rev = "c4b473b478b3adfbf8667d2fbe895d8423f1290b" }
prost = "0.14"
prost-reflect = "0.16"
prost-types = "0.14"
native-tls = "0.2"
reqwest = { version = "0.12", features = ["json"] }
ratatui = { version = "0.29", optional = true }
rustls = { version = "0.23", features = ["ring"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yaml_serde = "0.10.4"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json", "bigdecimal"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "process"] }
tokio-native-tls = "0.3"
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres", rev = "c4b473b478b3adfbf8667d2fbe895d8423f1290b" }
tokio-util = { version = "0.7", features = ["io"] }
toml = "0.8"
tonic = "0.14"
token-source = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json", "time"] }
tracing-opentelemetry = "0.32.1"
uuid = { version = "1", features = ["serde", "v4"] }
url = "2"
urlencoding = "2"

[profile.release]
overflow-checks = true

[dev-dependencies]
opentelemetry-proto = { version = "0.31.0", features = ["gen-tonic-messages", "trace", "metrics"] }
tempfile = "3"
temp-env = "0.3"
wiremock = "0.6"

[[test]]
name = "state_store_integration"
path = "tests/state_store_integration.rs"

[[test]]
name = "stats_db_integration"
path = "tests/stats_db_integration.rs"

[[test]]
name = "telemetry_otlp_smoke"
path = "tests/telemetry_otlp_smoke.rs"

[[test]]
name = "e2e_postgres_bigquery"
path = "tests/e2e_postgres_bigquery.rs"
required-features = ["integration-tests"]

[[test]]
name = "e2e_postgres_cdc"
path = "tests/e2e_postgres_cdc.rs"
required-features = ["integration-tests"]

[[test]]
name = "e2e_postgres_follow_config_changes"
path = "tests/e2e_postgres_follow_config_changes.rs"
required-features = ["integration-tests"]

[[test]]
name = "e2e_postgres_schema_changes"
path = "tests/e2e_postgres_schema_changes.rs"
required-features = ["integration-tests"]

[[test]]
name = "e2e_postgres_soft_deletes"
path = "tests/e2e_postgres_soft_deletes.rs"
required-features = ["integration-tests"]

[[test]]
name = "e2e_dynamodb_localstack"
path = "tests/e2e_dynamodb_localstack.rs"
required-features = ["integration-tests"]

[[test]]
name = "e2e_runner_graceful_shutdown"
path = "tests/e2e_runner_graceful_shutdown.rs"
required-features = ["integration-tests"]

[[test]]
name = "e2e_postgres_bigquery_real"
path = "tests/e2e_postgres_bigquery_real.rs"
required-features = ["real-bq-tests"]

[[test]]
name = "e2e_postgres_bigquery_real_cdc"
path = "tests/e2e_postgres_bigquery_real_cdc.rs"
required-features = ["real-bq-tests"]

[[test]]
name = "e2e_postgres_follow_config_changes_real"
path = "tests/e2e_postgres_follow_config_changes_real.rs"
required-features = ["real-bq-tests"]

[lints.rust]
unsafe_code = "deny"
dead_code = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }

# Keep pedantic on, but suppress the noisiest repo-wide lints so the remaining
# output is structural and actionable.
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
doc_markdown = "allow"
similar_names = "allow"
needless_raw_string_hashes = "allow"
must_use_candidate = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
uninlined_format_args = "allow"
unnecessary_wraps = "allow"
needless_pass_by_value = "allow"
unchecked_time_subtraction = "allow"
float_cmp = "allow"
unused_self = "allow"
wildcard_imports = "allow"
trivially_copy_pass_by_ref = "allow"
semicolon_if_nothing_returned = "allow"
unnested_or_patterns = "allow"
struct_field_names = "allow"
used_underscore_binding = "allow"
ignore_without_reason = "allow"
too_many_lines = "allow"
match_same_arms = "allow"
assigning_clones = "allow"
match_wildcard_for_single_variants = "allow"
cast_lossless = "allow"
implicit_clone = "allow"
struct_excessive_bools = "allow"
ref_option = "allow"
fn_params_excessive_bools = "allow"
explicit_iter_loop = "allow"
single_match_else = "allow"
items_after_statements = "allow"
default_trait_access = "allow"
format_push_string = "allow"
too_many_arguments = "allow"
